--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -210,101 +210,7 @@
 </mat-menu>
 
 <mat-menu #menuApps="matMenu">
-  <div fxLayout="row wrap" fxLayoutAlign="space-around flex-end">
-    <a
-      href="https://sceiba.cu"
-      target="_blank"
-      class="apps mat-caption"
-      matTooltip="{{ 'SCEIBA' | translate }}"
-    >
-      <img
-        src="/assets/images/svg/sceiba.svg"
-        [alt]="'SCEIBA' | translate"
-      />
-      <span>{{ 'SCEIBA' | translate }}</span>
-    </a>
-    <mat-divider class="w-90"></mat-divider>
-
-    <a
-      href="https://sceiba.cu/search"
-      target="_blank"
-      class="apps mat-caption"
-      matTooltip="{{ 'BUSQUEDA' | translate }}"
-    >
-      <img
-        src="/assets/images/svg/faro_neg.svg"
-        [alt]="'BUSQUEDA' | translate"
-      />
-      <span>{{ 'BUSQUEDA' | translate }}</span>
-    </a>
-    <a
-      href="https://organizaciones.sceiba.cu"
-      target="_blank"
-      class="apps mat-caption"
-      matTooltip="{{ 'ORGANIZACIONES' | translate }}"
-    >
-      <img
-        src="/assets/images/svg/organizaciones.svg"
-        [alt]="'ORGANIZACIONES' | translate"
-        style="width: 60px; height: 60px;"
-      />
-      <span>{{ 'ORGANIZACION' | translate }}</span>
-    </a>
-    <a
-      href="https://vocabularios.sceiba.cu"
-      target="_blank"
-      class="apps mat-caption"
-      matTooltip="{{ 'VOCABULARIOS' | translate }}"
-    >
-      <img
-        src="/assets/images/svg/vocabs.svg"
-        [alt]="'VOCABULARIO' | translate"
-        style="width: 55px; height: 55px"
-      />
-      <span>{{ 'VOCABULARIO' | translate }}</span>
-    </a>
-    <mat-divider class="w-90"></mat-divider>
-    <a
-      href="https://revistasmes.sceiba.cu"
-      target="_blank"
-      class="apps mat-caption"
-      matTooltip="{{ 'REVISTAS_MES' | translate }}"
-    >
-      <img
-        src="/assets/images/svg/catalog.svg"
-        [alt]="'REVISTAS' | translate"
-        style="width: 55px; height: 55px"
-      />
-      <span>{{'REVISTAS' | translate}}</span>
-    </a>
-    <a
-      href="https://courses.sceiba.org"
-      target="_blank"
-      class="apps mat-caption"
-      matTooltip="{{ 'SMOODLE' | translate }}"
-    >
-      <img
-        src="/assets/images/svg/cast-for-education.svg"
-        [alt]="'SMOODLE' | translate"
-        style="width: 55px; height: 55px"
-      />
-      <span>{{ 'SMOODLE' | translate }}</span>
-    </a>
-    <a
-      href="https://evaluaciones.sceiba.cu"
-      target="_blank"
-      class="apps mat-caption"
-      matTooltip="{{ 'EVALUACION' | translate }}"
-    >
-      <img
-        src="/assets/images/svg/evaluations.svg"
-        [alt]="'EVALUACION' | translate"
-        style="width: 55px; height: 55px"
-      />
-      <span>{{ 'EVALUACION_APP' | translate }}</span>
-    </a>
-  </div>
-
+  <sceiba-menu-apps></sceiba-menu-apps>
 </mat-menu>
 
 <div
