--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -87,8 +87,8 @@
                 <mat-card class="ligth-green-card">
                     <mat-card-header>
                         <div mat-card-avatar class="product1-image"></div>
-                        <!-- <mat-card-title>{{ 'SCEIBA_CATALOGO' | translate }}</mat-card-title> -->
-                        <mat-card-title>{{ 'SCEIBA_CATALOGO_SUB' | translate }}</mat-card-title>
+                        <!-- <mat-card-title>{{ 'SCEIBA_DESCUBRE' | translate }}</mat-card-title> -->
+                        <mat-card-title>{{ 'SCEIBA_DESCUBRE_SUB' | translate }}</mat-card-title>
                     </mat-card-header>
                     <mat-card-content>
                         <div class="p" markdown [src]="getPath('/assets/markdown/home.catalog')"></div>
