--- a/src/app/menu-apps/menu-apps.component.html
+++ b/src/app/menu-apps/menu-apps.component.html
@@ -18,7 +18,7 @@
     <span>{{ "BUSQUEDA" | translate }}</span>
   </a>
   <a
-    href="https://catalogo.sceiba.cu"
+    href="https://cuba-catalogo.sceiba.org"
     target="_blank"
     class="apps mat-caption"
     matTooltip="{{ 'SCEIBA_CATALOGO_SUB' | translate }}"
@@ -31,7 +31,7 @@
   </a>
 
   <a
-    href="https://revistasmes.sceiba.cu"
+    href="https://cuba-revistasmes.sceiba.org"
     target="_blank"
     class="apps mat-caption"
     matTooltip="{{ 'DIRECTORIO_MES_SUB' | translate }}"
@@ -46,7 +46,7 @@
   <mat-divider class="w-90"></mat-divider>
 
   <a
-    href="https://organizaciones.sceiba.cu"
+    href="https://cuba-organizaciones.sceiba.org"
     target="_blank"
     class="apps mat-caption"
     matTooltip="{{ 'SCEIBA_ORGANIZACIONES_SUB' | translate }}"
@@ -59,7 +59,7 @@
     <span>{{ "ORGANIZACION" | translate }}</span>
   </a>
   <a
-    href="https://personas.sceiba.cu"
+    href="https://cuba-personas.sceiba.org"
     target="_blank"
     class="apps mat-caption"
     matTooltip="{{ 'PERSONAS_SUB' | translate }}"
@@ -100,7 +100,7 @@
     <span>{{ "SMOODLE" | translate }}</span>
   </a>
   <a
-    href="https://evaluaciones.sceiba.cu"
+    href="https://evaluaciones.sceiba.org"
     target="_blank"
     class="apps mat-caption"
     matTooltip="{{ 'EVALUACION' | translate }}"
