--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -100,13 +100,13 @@
     </div>
     <div class="menu-full">
       <span style="width: 5%;"></span>
-      <a mat-button class="font-bold" routerLink="/">Inicio</a>
-      <a mat-button class="font-bold" href="https://organizaciones.sceiba.cu" target="_blank">Organizaciones</a>
-      <a mat-button class="font-bold" href="https://personas.sceiba.cu" target="_blank">Personas</a>
-      <a mat-button class="font-bold" href="https://catalogo.sceiba.cu" target="_blank">Catálogo</a>
-      <a mat-button class="font-bold" href="https://revistasmes.sceiba.cu" target="_blank">Revistas MES</a>
-      <a mat-button class="font-bold" href="https://evaluaciones.sceiba.cu" target="_blank">Evaluación</a>
-      <a mat-button class="font-bold" href="https://vocabularios.sceiba.cu/es" target="_blank">Vocabularios</a>
+      <a mat-button class="font-bold" routerLink="/">{{ "HOME" | translate }}</a>
+      <a mat-button class="font-bold" href="https://cuba-organizaciones.sceiba.org" target="_blank">{{ "ORGANIZACION" | translate }}</a>
+      <a mat-button class="font-bold" href="https://cuba-personas.sceiba.org" target="_blank">{{ "PERSONAS" | translate }}</a>
+      <a mat-button class="font-bold" href="https://cuba-catalogo.sceiba.org" target="_blank">{{ "SCEIBA_CATALOGO" | translate }}</a>
+      <a mat-button class="font-bold" href="https://cuba-revistasmes.sceiba.org" target="_blank">{{ "DIRECTORIO_MES" | translate }}</a>
+      <a mat-button class="font-bold" href="https://evaluaciones.sceiba.org" target="_blank">{{ "EVALUACION_APP" | translate }}</a>
+      <a mat-button class="font-bold" href="https://vocabularios.sceiba.cu/es" target="_blank">{{ "SCEIBA_VOCABULARIOS" | translate }}</a>
     </div>
   </mat-toolbar-row>
 </mat-toolbar>
