--- a/src/app/menu-apps/menu-apps.component.html
+++ b/src/app/menu-apps/menu-apps.component.html
@@ -10,7 +10,7 @@
   <mat-divider class="w-90"></mat-divider>
 
   <a
-    [routerLink]="['/search']"
+    [routerLink]="[env.discover]"
     class="apps mat-caption"
     matTooltip="{{ 'SCEIBA_DESCUBRE_SUB' | translate }}"
   >
@@ -18,7 +18,7 @@
     <span>{{ "BUSQUEDA" | translate }}</span>
   </a>
   <a
-    href="https://cuba-catalogo.sceiba.org"
+    href="{{env.catalog}}"
     target="_blank"
     class="apps mat-caption"
     matTooltip="{{ 'SCEIBA_CATALOGO_SUB' | translate }}"
@@ -31,7 +31,7 @@
   </a>
 
   <a
-    href="https://cuba-revistasmes.sceiba.org"
+    href="{{env.revistasmes}}"
     target="_blank"
     class="apps mat-caption"
     matTooltip="{{ 'DIRECTORIO_MES_SUB' | translate }}"
@@ -46,7 +46,7 @@
   <mat-divider class="w-90"></mat-divider>
 
   <a
-    href="https://cuba-organizaciones.sceiba.org"
+    href="{{env.organizations}}"
     target="_blank"
     class="apps mat-caption"
     matTooltip="{{ 'SCEIBA_ORGANIZACIONES_SUB' | translate }}"
@@ -59,7 +59,7 @@
     <span>{{ "ORGANIZACION" | translate }}</span>
   </a>
   <a
-    href="https://cuba-personas.sceiba.org"
+    href="{{env.persons}}"
     target="_blank"
     class="apps mat-caption"
     matTooltip="{{ 'PERSONAS_SUB' | translate }}"
@@ -72,7 +72,7 @@
     <span>{{ "PERSONAS" | translate }}</span>
   </a>
   <a
-    href="https://vocabularios.sceiba.cu"
+    href="{{env.vocabularies}}"
     target="_blank"
     class="apps mat-caption"
     matTooltip="{{ 'SCEIBA_VOCABULARIOS_SUB' | translate }}"
@@ -87,7 +87,7 @@
   <mat-divider class="w-90"></mat-divider>
 
   <a
-    href="https://courses.sceiba.org"
+    href="{{env.moodle}}"
     target="_blank"
     class="apps mat-caption"
     matTooltip="{{ 'SMOODLE_SUB' | translate }}"
@@ -100,7 +100,7 @@
     <span>{{ "SMOODLE" | translate }}</span>
   </a>
   <a
-    href="https://evaluaciones.sceiba.org"
+    href="{{env.evaluations}}"
     target="_blank"
     class="apps mat-caption"
     matTooltip="{{ 'EVALUACION' | translate }}"
