--- a/src/app/search/agregations-modal/agregations-modal.component.html
+++ b/src/app/search/agregations-modal/agregations-modal.component.html
@@ -1,9 +1,9 @@
 <div class="agregations-modal-container" >
   <div class="header-modal">
     <mat-toolbar style="width: 100%; ">
-      <h2 style="flex: auto;">Seleccione:</h2>
+      <h2 class="modal-title" >Seleccione:</h2>
       <p>
-        Options selected: {{agregations_selected.selectedOptions.selected.length}}
+        <h3>Opciones Seleccionadas:</h3> <span>{{agregations_selected.selectedOptions.selected.length}}</span>
       </p>
 
 
@@ -22,7 +22,7 @@
       <mat-selection-list #agregations_selected class="list-modal" (selectionChange)="onListSelectionChange(agregations_selected)">
 
           <mat-list-option *cdkVirtualFor="let agregation of agregations,let i" class="example-item" [value]="agregation">
-            {{agregation.key}}
+           <h6> {{agregation.key}}</h6>
           </mat-list-option>
 
       </mat-selection-list>
@@ -35,13 +35,13 @@
 
 
   <div class="footer">
+    <div  class="paginator-container">
+      <mat-paginator class="paginator-column" [length]="length" [pageSize]="pageSize" [pageSizeOptions]="pageSizeOptions"
+      (page)="changesOnParameters($event)">
+    </mat-paginator></div>
+<div class="button-container">
+  <button mat-button [mat-dialog-close]="agregations_selected._value" cdkFocusInitial>Ok</button></div>
 
-
-    <button mat-button [mat-dialog-close]="agregations_selected._value" cdkFocusInitial>Ok</button>
-   <div class="+">
-    <mat-paginator class="paginator-column" [length]="length" [pageSize]="pageSize" [pageSizeOptions]="pageSizeOptions"
-    (page)="changesOnParameters($event)">
-  </mat-paginator></div>
 
 
   </div>
