--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -240,7 +240,7 @@
 //     }
 // }
 
-// /* Medium devices (landscape tablets, 768px and up) */
+// __<<ngThemingMigrationEscapedComment10>>__
 // @media only screen and (max-width: 768px) {
 //     .container p {
 //         font-size: 2.5vw;
