success migration to v15

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,7 @@
 
     <div
       class="center-elements"
-      appearance="legacy"
+      appearance=""
       aria-label="'MENU_INICIO' | translate"
       fxLayout="row wrap"
       fxLayoutAlign="center"
