update usage of mat-chips

--- a/src/app/search/charts/bar-vertical/bar-vertical.component.html
+++ b/src/app/search/charts/bar-vertical/bar-vertical.component.html
@@ -16,8 +16,8 @@
         (select)="onSelect($event)">
     </ngx-charts-bar-vertical>
 
-    <mat-chip-list>
+    <mat-chip-set>
         <mat-chip >{{xAxisLabel}}</mat-chip>
-    </mat-chip-list>
+    </mat-chip-set>
 </div>
 
