--- a/src/app/search/charts/gauge-chart/gauge-chart.component.html
+++ b/src/app/search/charts/gauge-chart/gauge-chart.component.html
@@ -9,8 +9,8 @@
     >
   </ngx-charts-gauge>
 
-  <mat-chip-list>
+  <mat-chip-set>
     <mat-chip >{{xAxisLabel}}</mat-chip>
-  </mat-chip-list>
+  </mat-chip-set>
 
 </div>
