--- a/src/app/search/charts/pie-grid/pie-grid.component.html
+++ b/src/app/search/charts/pie-grid/pie-grid.component.html
@@ -5,7 +5,7 @@
         [results]="dataChild"
         (select)="onSelect($event)">
     </ngx-charts-pie-grid>
-    <mat-chip-list>
+    <mat-chip-set>
         <mat-chip >{{_yAxisLabel}}</mat-chip>
-    </mat-chip-list>
+    </mat-chip-set>
 </div>
