--- a/src/app/search/charts/polar-chart/polar-chart.component.html
+++ b/src/app/search/charts/polar-chart/polar-chart.component.html
@@ -12,9 +12,9 @@
         >
         </ngx-charts-pie-chart>
 
-        <mat-chip-list>
+        <mat-chip-set>
                 <mat-chip >{{xAxisLabel}}</mat-chip>
-        </mat-chip-list>
-        
-        
+        </mat-chip-set>
+
+
 </div>
