--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -43,7 +43,7 @@
     </div> -->
 
     <!-- SLIDES -->
-    <div class="container">
+    <!-- <div class="container">
 
         <div class="mySlides fade">
             <div class="numbertext">{{ slideIndex }} / 4</div>
@@ -77,7 +77,7 @@
             <span class="dot" (click)="currentSlide(3)"></span>
             <span class="dot" (click)="currentSlide(4)"></span>
         </div>
-    </div>
+    </div> -->
 
     <div class="" ngClass.xs="pt-20 ph-30 pb-20">
         <h1 class="mat-display-1 text-center" style="margin: 0;">{{ 'PROD_SERV' | translate }}</h1>
